logs/fetch_2025-09-23_02-53-54.txt
[START] Background fetcher 
  File "C:\Users\tyler\RedditVideoBot\background_fetcher.py", line 1
    @echo off
          ^^^
SyntaxError: invalid syntax
